# android-vulkan-renderer

./: .gitignore  LICENSE  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: AGirl.mtl  logo.mtl  shader.frag  shader.frag.spv  shader.slang  shader.spv  shader.vert  shader.vert.spv
app/src/main/cpp/: AndroidHelper.cpp  AndroidHelper.h  AndroidOut.h  CMakeLists.txt  Camera.h  CameraController.cpp  CameraController.h  VulkanRenderer.cpp  VulkanRenderer.h  desktopExample.cpp  main.cpp
app/src/main/java/com/example/myapplication/: MainActivity.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
